<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Book10</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="book">BOOK</string>
    <string name="ten">10</string>
    <string name="sign_in">Sign In</string>
    <string name="user_email">Email Address:</string>
    <string name="email_hint">Enter email here</string>
    <string name="email_confirm">Re-enter email to confirm:</string>
    <string name="new_user">New User? Click here:</string>
    <string name="setup_account">Account Setup</string>
    <string name="submit">Submit</string>
    <string name="failed_login">Sorry, that email is not yet registered. Please check to make sure your email is entered correctly.</string>
    <string name="new_user_email_match_error">Sorry, your email address does not match the confirmation email address.</string>
    <string name="new_user_email_already_registered">This email address is already registered, login with that email or enter a different one.</string>
    <string name="by">By: </string>
    <string name="no_recommendations">No recommendations, please enter books into your favorites list..</string>
    <string name="ok_button">Ok</string>
    <string name="no_favorites_entered_dialog">Enter your ten favorites books,
        as you enter each one we will check to make sure the correct book was found and then add it to your list.
        Once all ten are entered we\'ll recommend some books that you\'ll enjoy.</string>
    <string name="enter_book_title">Book Title: </string>
    <string name="edittext_hint_enter_book_title">Title</string>
    <string name="enter_book_author">Book Author: </string>
    <string name="edittext_hint_enter_book_author">Author</string>
    <string name="cancel">Cancel</string>
    <string name="login_success">Successfully logged in.</string>
    <string name="parse_exception_create_login">Unable to create account because of exception: </string>
    <string name="favorite_added_confirm_title">The book you\'re adding is:</string>
    <string name="correct_question">Correct?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="declined_favorites_confirmation">Sorry, please enter again.</string>
    <string name="favorite_book_added">This Book has been added to your favorites.</string>
    <string name="finished_entering_favorites">That\'s all 10!  Give us a moment and well get your recommendations.</string>
    <string name="favorites">Favorites</string>
    <string name="recommendations">Recommendations</string>
    <string name="need_title_author_submit_favorites_message">Please enter a title and author for the book</string>
    <string name="no_results">No results, please check your spelling and try again</string>
    <string name="add_book_button">Add Book</string>
    <string name="update_recommended_list_button">Update</string>
    <string name="ten_favorites">Sorry, you already have the max of 10 favorites entered.</string>

</resources>
