<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_book_title"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_margin="20dp"/>

    <EditText
        android:id="@+id/enter_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_hint_enter_book_title"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_book_author"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_margin="20dp"/>

    <EditText
        android:id="@+id/enter_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_hint_enter_book_author"
        android:gravity="center"/>

</LinearLayout>