<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="30dp"
        android:layout_above="@+id/enter_email"
        android:paddingBottom="30dp"/>

    <TextView
        android:id="@+id/enter_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_email"
        android:layout_above="@+id/new_user_email_edittext"
        android:layout_centerInParent="true"
        android:textSize="20dp"
        android:padding="20dp"/>

    <EditText
        android:id="@+id/new_user_email_edittext"
        android:layout_above="@+id/confirm_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"/>

    <TextView
        android:id="@+id/confirm_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_confirm"
        android:textSize="20dp"
        android:layout_centerInParent="true"
        android:paddingTop="30dp"
        android:paddingBottom="20dp"/>

    <EditText
        android:id="@+id/new_user_confirm_email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:layout_below="@id/confirm_text"/>

    <Button
        android:id="@+id/submit_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_user_confirm_email_edittext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:textSize="20dp"
        android:padding="20dp"/>

</RelativeLayout>