<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorite_added_confirm_title"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/confirmation_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/by"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/confirm_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correct_question"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"/>

</LinearLayout>